--- a/src/html/detail_page.html
+++ b/src/html/detail_page.html
@@ -370,11 +370,11 @@
 			</div>
 			<div class="detail_box">
 				<div class="detail_box_left">
-					<div class="big_img">
-						<img src="./img/65.png" />
+					<div class="big_img" id="middle-box">
+						<img src="./img/65.png" id="middle-img" />
 					</div>
 					<div class="small_img">
-						<ul class="detail_list">
+						<ul class="detail_list" id="small-box">
 							<li><img src="./img/66.png" /></li>
 							<li><img src="./img/37.jpg" /></li>
 							<li><img src="./img/38.jpg" /></li>
@@ -384,7 +384,28 @@
 					</div>
 				</div>
 				<div class="detail_box_right">
-					
+					<h3>千层星云酥 180克/3颗</h3>
+					<h5>酥饼界的小仙女</h5>
+					<div class="count_down">
+						<h6>限时购</h6>
+						<span class="ready">低至¥22   距离开抢还剩</span>
+						<div class="clock">
+							<span class="time hour">00</span>
+							<span class="colon">时</span>
+							<span class="time minute">00</span>
+							<span class="colon">分</span>
+							<span class="time sec">00</span>
+							<span class="colon">秒</span>
+						</div>
+					</div>
+					<div class="particular">
+						<p><span>价格</span></p>
+						<p></p>
+						<p><span>领券</span></p>
+						<p><span>促销</span></p>
+						<p><span>积分</span></p>
+						<p><span>服务</span></p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -485,6 +506,8 @@
 <script src="./js/jquery-1.11.3.js"></script>
 <script src="./js/show.js"></script>
 <script src="./js/suspend.js"></script>
+<!-- <script src="./js/magnifying.js"></script> -->
+<script src="./js/count_time.js"></script>
 <script>
 	var oForm = document.forms['search-form'];
 
