--- a/src/html/detail_page.html
+++ b/src/html/detail_page.html
@@ -399,12 +399,48 @@
 						</div>
 					</div>
 					<div class="particular">
-						<p><span>价格</span></p>
-						<p></p>
-						<p><span>领券</span></p>
-						<p><span>促销</span></p>
-						<p><span>积分</span></p>
-						<p><span>服务</span></p>
+						<p>
+							<span class="first_left_span">活动价</span>
+							<span class="prince_solgan">¥</span>
+							<span class="big_prince">22</span>
+							<span class="right_span">
+								<span>999+</span><br />
+								<span>用户评价</span>
+							</span>
+						</p>
+						<p>
+							<span class="left_span">限制</span>
+							<span class="small_span">特价商品不可与优惠券叠加使用</span>
+						</p>
+						<p>
+							<span class="left_span">积分</span>
+							<span class="small_span">购买最高得2积分</span>
+						</p>
+						<p class="dashed"></p>
+						<p>
+							<span class="left_span">服务</span>
+							<span class="underline_div">
+								<span>不支持无忧退换货</span>
+								<span>48小时快速退款</span>
+								<span>满88元免邮费</span>
+								<span>网易自营品牌</span>
+								<span>国内部分地区无法配送</span>
+							</span>
+						</p>
+					</div>
+					<div class="submit_div">
+						<div class="jiade_p">
+							<span>规格</span>
+							<a href="javascript:;" class="box1">
+								1盒装(3枚入)
+							</a>
+						</div>
+						<div class="jiade_p">
+							<span>数量</span>
+							<a href="javascript:;">
+								
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
